It should be done now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Lab_POO)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Lab_POO main.cpp eshop.cpp eshop.h electronic.cpp electronic.h laptop.cpp laptop.h smart_phone.cpp smart_phone.h product.cpp product.h User_s.cpp User_s.h)
+add_executable(Lab_POO main.cpp eshop.cpp eshop.h electronic.cpp electronic.h laptop.cpp laptop.h smart_phone.cpp smart_phone.h product.cpp product.h User_s.cpp User_s.h product_builder.cpp product_builder.h)
